--- a/hw4-crud/src/App.css
+++ b/hw4-crud/src/App.css
@@ -10,3 +10,9 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+
+.form--controls {
+  padding: 10px;
+  border: 1px solid grey;
+  border-radius: 5px;;
+}
